Course_RA_DTU/log/build_2025-03-04_14-39-44/tf_broadcaster/stderr.log
  File "/home/ubuntu/ros2_ws2/install/tf_broadcaster/lib/python3.10/site-packages/tf_broadcaster/listener.py", line 1
    !/usr/bin/env python3
    ^
SyntaxError: invalid syntax

